[package]
name = "txTrait"
version = "0.1.1"
edition = "2021"

[dependencies]
subxt = { version = "0.38.0", features = ["subxt-lightclient"] }
tokio = "1.42.0"


[features]
alles = ["solana", "subxthelper", "icp"]
subxthelper = ["subxt"]                  # "subxt-signer", "subxt-macro", "subxt-metadata"
solana = ["solana-sdk", "raydium_amm"]
icp = ["ic-cdk", "ic-cdk-macros"]


[dependencies.solana-sdk]
version = "2.1.5"
optional = true


[dependencies.raydium_amm]
git = "https://github.com/raydium-io/raydium-amm"
default-features = false
rev = "d10a8e9fab9f7a3d87b4ae3891e3e4c24b75c041"
features = ["client"]

[dependencies.ic-cdk]
version = "0.17.1"
optional = true

[dependencies.ic-cdk-macros]
ic-cdk-macros = "0.17.1"
optional = true
